--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 server.port=8080
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_advanced?useLegacyDatetimeCode=false&serverTimezone=CET
+
+spring.datasource.username=root
+spring.datasource.password=Root1234!!
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
