Filters Spring Security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.username=root
 spring.datasource.password=Root1234!!
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+
+logging.level.springframework.security.web.FilterChainProxy=DEBUG
