--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.datasource.password=Root1234!!
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
-logging.level.springframework.security.web.FilterChainProxy=DEBUG
+#logging.level.springframework.security.web.FilterChainProxy=DEBUG
