--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,11 @@ spring.datasource.password=Root1234!!
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=pablosuc94test@gmail.com
+spring.mail.password=ojayudwhsjpideph
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.auth=true
+
 #logging.level.springframework.security.web.FilterChainProxy=DEBUG
