--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,6 @@ spring.mail.password=ojayudwhsjpideph
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.auth=true
 
+cron.expression=*/2 * * * * *
+
 #logging.level.springframework.security.web.FilterChainProxy=DEBUG
