--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,4 +17,6 @@ spring.mail.properties.mail.smtp.auth=true
 
 cron.expression=*/2 * * * * *
 
+user.panel.greetings=Hello from no profile!
+
 #logging.level.springframework.security.web.FilterChainProxy=DEBUG
