Styled view of error 404

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,5 +18,6 @@ spring.mail.properties.mail.smtp.auth=true
 cron.expression=*/2 * * * * *
 
 user.panel.greetings=Hello from no profile!
+server.error.whitelabel.enabled=false
 
 #logging.level.springframework.security.web.FilterChainProxy=DEBUG
