Removed credentials for gmail as well as disabled less secure app in settings of e-mail

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,8 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=pablosuc94test@gmail.com
-spring.mail.password=ojayudwhsjpideph
+spring.mail.username=#your gmail
+spring.mail.password=#your password
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.auth=true
 
